Minor Text Fixes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h1>Hello World!</h1>
-<a href>="research.html">Research Summary</a>
+<a href="research.html">Research Summary</a>
 
 </body>
 
