--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 
 <body>
 
-<h1>Hello World!</h1>
+<h1>Wesley Orth!</h1>
+<image src="Wesley_Orth" width="200" heigth="250" title="Wes"></image>
 <a href="research.html">Research Summary</a>
+
 
 </body>
 
