Minor Text Fixes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h1>Wesley Orth!</h1>
-<image src="Wesley_Orth" width="200" heigth="250" title="Wes"></image>
+<image src="Wesley_Orth.jpg" width="200" heigth="250" title="Wes"></image>
 <a href="research.html">Research Summary</a>
 
 
