--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
 <body>
 
-<h1>Wesley Orth!</h1>
+<h1>Wesley Orth</h1>
 <image src="Wesley_Orth.jpg" width="200" heigth="250" title="Wes"></image>
+<br>
 <a href="research.html">Research Summary</a>
 
 
