--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 
+<!-- WesWeb Homepage -->
+
 <html>
 
 <head>
+<link rel="stylesheet" type="text/css" href="style.css"></link>
 <title>WesWeb</title>
 </head>
 
@@ -12,7 +15,6 @@
 <image src="Wesley_Orth.jpg" width="200" heigth="250" title="Wes"></image>
 <br>
 <a href="research.html">Research Summary</a>
-
 
 </body>
 
