--- a/research.html
+++ b/research.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 
+<!-- WesWeb Research -->
+
 <html>
 
 <head>
+<link rel="stylesheet" type="text/css" href="style.css"></link>
 <title>WesWeb-Research</title>
 </head>
 
