--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 
 <body>
 
+<script src="contactscript.js"></script>
+
 <h1>Wesley Orth</h1>
 <image src="Wesley_Orth.jpg" width="200" heigth="250" title="Wes"></image>
 <br>
+<br>
 <a href="research.html">Research Summary</a>
+<br>
+<button type="button" onclick="contact()">Contact Me</button>
+<br>
+<p id="0"></p>
 
 </body>
 
