--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 <button type="button" onclick="contact()">Contact Me</button>
 <p id="0"></p>
 
+<a href="Placeholder.pdf">Placeholder PDF</a>
+
 </body>
 
 </html>
