--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
 <image src="Wesley_Orth.jpg" width="200" heigth="250" title="Wes"></image>
 <br>
 <br>
-<a href="research.html">Research Summary</a>
+<a href="research.html">Research</a>
 <br>
 <br>
 <a href="Placeholder.pdf">Placeholder PDF</a>
+<br>
+<br>
+<a href="https://www.linkedin.com/in/wesleyjorth/">LinkedIn</a>
 <br>
 <br>
 <button type="button" onclick="contact()">Contact Me</button>
