--- a/forfun.html
+++ b/forfun.html
@@ -13,8 +13,8 @@
 <h1>Snake</h1>
 <br>
 <br>
-<script src="snakescript.js" type="text/javascript"></script>	
 <canvas id="canvas" width="450" height="450"></canvas>
+<script src="snake.js" type="text/javascript"></script>	
 <br>
 <br>
 <a href="index.html"> Homepage </a>
