--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 <a href="https://www.linkedin.com/in/wesleyjorth/">LinkedIn</a>
 <br>
 <br>
+<a href="forfun.html">ForFun</a>
+<br>
+<br>
 <button type="button" onclick="contact()">Contact Me</button>
 <p id="0"></p>
 
