--- a/research.html
+++ b/research.html
@@ -12,7 +12,7 @@
 <body>
 
 <h1>Research</h1>
-<p>This is where my paragraph is. It contains my research interests.</p>
+<p>Current Masters Student at Northwestern University studying Linguistics. Interests include semantics, development, and processing.</p>
 
 <a href="index.html"> Homepage </a>
 </body>
