--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <a href="research.html">Research</a>
 <br>
 <br>
-<a href="Placeholder.pdf">Placeholder PDF</a>
+<a href="CV.pdf">CV</a>
 <br>
 <br>
 <a href="https://www.linkedin.com/in/wesleyjorth/">LinkedIn</a>
