--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 
-<!-- WesWeb Homepage -->
+<!-- WesWeb Homepage and Site setup -->
 
 <html>
 
 <head>
-<link rel="stylesheet" type="text/css" href="style.css"></link>
+<!-- Metadata -->
+<meta charset="UTF-8">
+<meta name="viewport" contet="width=device_width, initial-scale=1">
 <title>WesWeb</title>
+<!-- Style -->
+<link rel="stylesheet" type="text/css" href="style.css"></link>
+
 </head>
 
 <body>
+<!-- Navigation -->
+<nav class="w3-bar w3black">
+	<a href="index.html" class="w3-button w3-bar-item">Home</a>
+	<a href="research.html" class="w3-button w3-bar-item">Research</a>
+	<a href="CV.pdf" class="w3-button w3-bar-item">CV</a>
+</nav>
 
+
+<!-- Contact Script -->
 <script src="contactscript.js"></script>
 
 <h1>Wesley Orth</h1>
