--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 
 <body>
 <!-- Navigation -->
-<nav class="w3-bar w3black">
-	<a href="index.html" class="w3-button w3-bar-item">Home</a>
-	<a href="research.html" class="w3-button w3-bar-item">Research</a>
-	<a href="CV.pdf" class="w3-button w3-bar-item">CV</a>
-</nav>
+<ul>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="research.html">Research</a></li>
+	<li><a href="https://www.linkedin.com/in/wesleyjorth/">LinkedIn</a></li>
+	<li><a href="CV.pdf">CV</a></li>
+</ul>
 
 
 <!-- Contact Script -->
@@ -28,17 +29,6 @@
 
 <h1>Wesley Orth</h1>
 <image src="Wesley_Orth.jpg" width="200" heigth="250" title="Wes"></image>
-<br>
-<br>
-<a href="research.html">Research</a>
-<br>
-<br>
-<a href="CV.pdf">CV</a>
-<br>
-<br>
-<a href="https://www.linkedin.com/in/wesleyjorth/">LinkedIn</a>
-<br>
-<br>
 <button type="button" onclick="contact()">Contact Me</button>
 <p id="0"></p>
 
