--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 <meta charset="UTF-8">
 <meta name="viewport" contet="width=device_width, initial-scale=1">
 <title>WesWeb</title>
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding:0;
+	background-color: #00173d;
+}
+li {
+	display: inline;
+}
 <!-- Style -->
 <link rel="stylesheet" type="text/css" href="style.css"></link>
 
