--- a/index.html
+++ b/index.html
@@ -9,15 +9,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" contet="width=device_width, initial-scale=1">
 <title>WesWeb</title>
-ul {
-	list-style-type: none;
-	margin: 0;
-	padding:0;
-	background-color: #00173d;
-}
-li {
-	display: inline;
-}
+
 <!-- Style -->
 <link rel="stylesheet" type="text/css" href="style.css"></link>
 
@@ -36,8 +28,12 @@ li {
 <!-- Contact Script -->
 <script src="contactscript.js"></script>
 
+<!-- Heading -->
 <h1>Wesley Orth</h1>
+<!-- Photo -->
 <image src="Wesley_Orth.jpg" width="200" heigth="250" title="Wes"></image>
+<!-- Contact -->
+<br>
 <button type="button" onclick="contact()">Contact Me</button>
 <p id="0"></p>
 
