--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <html>
 
 <head>
+<style>
 <!-- Metadata -->
 <meta charset="UTF-8">
 <meta name="viewport" contet="width=device_width, initial-scale=1">
@@ -12,7 +13,7 @@
 
 <!-- Style -->
 <link rel="stylesheet" type="text/css" href="style.css"></link>
-
+</style>
 </head>
 
 <body>
