--- a/research.html
+++ b/research.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
-
+<!-- Navigation -->
+<ul>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="research.html">Research</a></li>
+	<li><a href="https://www.linkedin.com/in/wesleyjorth/">LinkedIn</a></li>
+	<li><a href="CV.pdf">CV</a></li>
+</ul>
 <h1>Research</h1>
 <p>Current Masters Student at Northwestern University studying Linguistics. Interests include semantics, development, and processing.</p>
 
