--- a/research.html
+++ b/research.html
@@ -5,8 +5,13 @@
 <html>
 
 <head>
-<link rel="stylesheet" type="text/css" href="style.css"></link>
+<!-- Metadata -->
+<meta charset="UTF-8">
+<meta name="viewport" contet="width=device_width, initial-scale=1">
 <title>WesWeb-Research</title>
+
+<!-- Style -->
+<link rel="stylesheet" type="text/css" href="style.css"></link>
 </head>
 
 <body>
@@ -17,12 +22,13 @@
 	<li><a href="https://www.linkedin.com/in/wesleyjorth/">LinkedIn</a></li>
 	<li><a href="CV.pdf">CV</a></li>
 </ul>
+
+<!--Heading-->
 <br>
 <br>
 <h1>Research</h1>
+<!-- Research Info -->
 <p>Current Masters Student at Northwestern University studying Linguistics. Interests include semantics, development, and processing.</p>
-
-<a href="index.html"> Homepage </a>
 </body>
 
 </html>
