--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
 <image src="Wesley_Orth.jpg" width="200" heigth="250" title="Wes"></image>
 <!-- Contact -->
 <br>
+<div style="text-align:center;">
 <button type="button" onclick="contact()">Contact Me</button>
 <p id="0"></p>
+</div>
 </body>
 
 </html>
