--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
 <h1>Wesley Orth</h1>
 <!-- Photo -->
 <image src="Wesley_Orth.jpg" width="200" heigth="250" title="Wes"></image>
+<!-- Info -->
+<br>
+<br>
+<p>I am a 1st year PhD student at Northwestern University studying Linguistics. My main interests are semantics and language processing.</p>
 <!-- Contact -->
+<br>
 <br>
 <div style="text-align:center;">
 <button type="button" onclick="contact()">Contact Me</button>
