--- a/research.html
+++ b/research.html
@@ -28,7 +28,10 @@
 <br>
 <h1>Research</h1>
 <!-- Research Info -->
-<p>Current Masters Student at Northwestern University studying Linguistics. Interests include semantics, development, and processing.</p>
+<p>Currently I am researching the role of context in adjective information. Questions that motivate this reearch are:
+1. How do children learn the difference in contextual information needed across adjective types?
+2. Do children seek out contextual information for resolving these adjectives in adult-like ways?
+3. Do adults select contexual information in a way that limits redundancy and irrelevant information?</p>
 </body>
 
 </html>
