--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <!-- Info -->
 <br>
 <br>
-<p>I am a 1st year PhD student at Northwestern University studying Linguistics. My main interests are semantics and language processing.</p>
+<p>I am a 1st year PhD student at Northwestern University studying Linguistics. <br> My main interests are semantics and language processing.</p>
 <!-- Contact -->
 <br>
 <br>
