--- a/research.html
+++ b/research.html
@@ -28,9 +28,9 @@
 <br>
 <h1>Research</h1>
 <!-- Research Info -->
-<p>Currently I am researching the role of context in adjective information. Questions that motivate this reearch are:
-1. How do children learn the difference in contextual information needed across adjective types?
-2. Do children seek out contextual information for resolving these adjectives in adult-like ways?
+<p>Currently I am researching the role of context in adjective interpretation. Questions that motivate this reearch are: <br>
+1. How do children learn the difference in contextual information needed across adjective types? <br>
+2. Do children seek out contextual information for resolving these adjectives in adult-like ways?<br>
 3. Do adults select contexual information in a way that limits redundancy and irrelevant information?</p>
 </body>
 
